- added option to hide/show login button on mobile - fix twitter transfer badge - show eth logo for eth transactions - removed extra border for wallet setting collapsed components - updated twitch icon

--- a/app/src/components/Confirm/TransferConfirm/TransferConfirm.scss
+++ b/app/src/components/Confirm/TransferConfirm/TransferConfirm.scss
@@ -79,7 +79,7 @@
 
   .twitter-badge {
     cursor: pointer;
-    padding: 3px;
+    padding: 4px 0;
     display: block;
   }
 }
